<resources>
    <string name="app_name">MovieMentor</string>
    <string name="home_page_header_title">Trending</string>
    <string name="search_page_header_title">Search</string>
    <string name="settings_page_header_title">Settings</string>
    <string name="footer_search">Search</string>
    <string name="footer_featured">Featured</string>
    <string name="footer_settings">Settings</string>
    <string name="search_bar_hint">Search All Movies</string>
    <string name="no_more_search_results">No Results Available</string>
    <string name="no_matching_search_results">No Matching Results Found</string>
    <string name="advanced_search_options_modal_header">Filters</string>
    <string name="select_genre_filter">Select a genre to filter by:</string>
    <string name="select_sort_option">Sort by:</string>
    <string name="clear_search_options_button">Clear All</string>
    <string name="apply_search_options_button">Apply</string>
    <string name="movie_page_warning_banner_line_1">Proceed with caution.</string>
    <string name="movie_page_warning_banner_line_2">This contains material you previously flagged.</string>
    <string name="movie_page_just_watch_attribution">Streaming Information Provided by JustWatch</string>
    <string name="movie_page_summary_header">Summary</string>
    <string name="movie_page_content_warnings_header">Content Warnings</string>
    <string name="movie_page_no_content_warnings">No Content Warnings Reported</string>
    <string name="content_warning_item_multiple_timestamps">Multiple\nInstances</string>
    <string name="settings_row_content_warnings">Content Warnings</string>
    <string name="settings_row_about">About</string>
    <string name="content_warnings_page_title">Content Warnings</string>
    <string name="show_content_warning">Show Content Warning</string>
    <string name="show_content_warning_description">Decide if we should hide movies with this content warning from search and suggestions.</string>
    <string name="privacy_policy_page_title">Privacy Policy</string>
    <string name="privacy_policy_page_paragraph_header">Our Privacy Policy</string>
    <string name="terms_of_service_page_title">Terms of Service</string>
    <string name="terms_of_service_page_paragraph_header">Our Terms of Service</string>
    <string name="privacy_policy_page_paragraph">Overall our goal is to reduce tracking and data storage
        on users to promote a safe environment for all users.\n\n\n<big><b>"Tracking and Data Storage"</b></big>\n
        For users who do not have an account:\n\nThere is minimal data tracking which primarily
        includes data collected by CloudFlare such as which pages are accessed, how many requests
        are made, how many unique users are visiting, and the country of origin of said users.\n\n
        For users with an account:\n\nData related to your account such as your email and login
        credentials, as well as content warnings you have submitted are securely stored. These are
        available for your viewing discretion in your profile and can be exported there.\n\nFor your
        safety, your content warnings are NOT stored on MovieMentor\'s servers, rather saved in your
        browser on your local machine.\n\nIn compliance with regulations such as those presented by
        the General Data Protection Regulation (GDPR) and California Consumer Protection Act (CCPA),
        all data is secured and monitored for potential data breaches. Additionally users are
        provided with the option to delete their account including all data stored, as well as
        export all of the data stored on an individual.\n\n\n<big><b>"Legal Compliance"</b></big>\nMovieMentor
        reserves the right to give any data to law enforcement given a proper warrant is issued.
        MovieMentor is based in the United States of America, as is CloudFlare, GitHub, and Amazon
        Web Services. As of 2023-03-11 MovieMentor has not shared any data with the authorities.</string>
    <string name="terms_of_service_page_paragraph">\n<big><b>Agreement to our Terms</b>\n</big>MovieMentor
        ("Application") is an application developed and maintained by Jeffrey DiVincent,
        Adam Fernandes, Jacob Franz, Nathanael Gaulke, Lauren Morris, and Garrett Spears
        (the "Developers," "we," "us," "our"). We operate the website moviementor.app
        (the "Site," "Website"), a suite of mobile applications (the "Apps") as well as other
        related products and services that fall under these terms (the "Terms") (collectively, the "Services").\n
        \nMovieMentor can be contacted by email at moviementor@divi.sh.\n\nThese Terms constitute a
        legally binding agreement between you, whether personally or on behalf of an entity ("you"),
        and the Developers, concerning your use and access to the Services. You agree that by
        accessing the Services, you have read, understood, and agreed to be bound by all of these
        Terms.\n\nIf you do not agree with any or all of these Terms, you are not permitted to use the
        Services and must immediately terminate use.\n\nThe Application and its Developers reserve the
        right to amend these Terms at any time. Updated Terms will be listed on the Site and be
        indicated by updating the "Last updated" date on these Terms, and you waive the right to
        receive specific notice of each such change. It is your responsibility to periodically
        review these Terms to stay informed up updates. Terms updates are effective immediately on
        publication.\n\n\n<big><b>"Our Services"</b></big>\nThe information provided when using the
        Services is not intended for distribution to or use by any person or entity in any
        jurisdiction or country where such use would be contrary to law or regulation or which
        subject us to any registration requirement within such jurisdiction or country. Accordingly,
        those persons who choose to access the Services in other locations do so on their own
        initiative and are solely responsible for compliance with local laws, if and to the extent
        local laws are applicable.\n\nMovieMentor should not be used by government agencies where
        secrecy is required. MovieMentor is also not a medical application; while all user data is
        stored on-device, we are not beholden to the Health Insurance Portability and
        Accountability Act (HIPAA).\n\n\n<big><b>"Intellectual Property Rights"</b></big>\nThe source
        code of the Apps and the Site are open-sourced under the MIT License. Movie data is provided
        by The Movie Database (TMDB) and streaming data is provided by JustWatch. We may link to such
        services to provide additional functionality to you (the User). All user-submitted content
        is to be irreversibly and perpetually licensed under a CC-0 license; contributors waive
        their copyrights under the terms of the CC-0 license.\n\nYou are required to own the copyright
        of any and all submitted content. If you believe any material available on or through the
        Services violates any copyrights you own or control, please send takedown notices to
        moviementor.copyright@divi.sh \n\nMovieMentor, its logo, and the MovieMentor TV Creature are
        the shared intellectual property of the Developers.\n\nThe Developers are to abide by
        security best practices and to keep user data safe to our best ability.\n\n\n<big><b>"User Registration"</b></big>
        \nBy creating an account for the Services, you agree that
        submitted information is accurate, kept up-to-date, and does not perform the following:\n\n
        - Perform any actions that may lead us to violate our contractual agreements with The Movie
        Database, JustWatch, Amazon Web Services, Cloudflare, GitHub, or any other dependent parties,
        including data scraping or unauthorized use of our Services.\n- Trick, defraud, or mislead us
        and other users for any reason.\n- Circumvent, disable, or interfere with security-related
        features, in line with the Computer Fraud and Abuse Act (CPAA).\n- Upload and transmit
        viruses, Trojan horses, trackers, spyware, other malware, or other illicit material,
        including excessive use of capital letters, abuse of Unicode characters, and other spam
        content (posting of repetitive and/or derivative content).\n- Disparage, tarnish, or
        otherwise harm, in our opinion, the Developers, the Site, the Apps, and/or the Services.
        \n- Engage in unauthorized framing of or linking to the Services.\n- Engage in any automated
        use of the system, including unauthorized use of APIs and reverse-engineering of the
        Services.\n- Harass, annoy, intimidate, or threaten the Developers or other users of the
        Services.\n- Use the Services to advertise or offer to sell goods and services.\n\nWe reserve
        the right to delete any account for any reason. Users cannot re-create deleted accounts
        without written consent by the Developers. Users also have the right to request user data
        stored through the Application and to terminate their own account at any time.
        User-submitted data will not be deleted automatically on account deletion. These Terms
        shall remain in full force while you use the Services.\n\n\n<big><b>"Services Management"</b></big>
        \nWe reserve the right, but not the obligation, to:\n\n- Monitor the Services for violations of these Terms.
        \n- Restrict access to the Services at
        our own discretion.\n- Add or remove content to the Services.\n- Otherwise manager the
        Services to protect our rights and ensure continued operation.\n\n\n<big><b>"Privacy Policy"</b></big>
        \nWe care about data privacy and security, Please review
        our Prvacy Policy at https://moviementor.app/privacy. By using the Services, you agree to
        be bound by our Privacy Policy, which is incorporated into these Terms. Please be advised
        that our services are based in the United States, but we will make a best effort to comply
        with European privacy regulations like the Gerneral Data Protection Regulation (GDPR). For
        more information, contact moviementor.privacy@divi.sh.\n\n\n<big><b>"Dispute Resolution"</b></big>
        \nMovieMentor and the Developers are a small
        independently-operated project. We reserve the right to resolve disputes in any manner we
        see fit. To file a complaint, contact moviementor@divi.sh. Disputes have no grounding after
        three (3) months since the incident in question. For purposes of litigation, arbitration,
        and liability, we operate out of the city of Seattle in King County, Washington, United
        States of America.\n\nLast Updated 2023-03-11</string>
    <string name="action_genre_text">Action</string>
    <string name="adventure_genre_text">Adventure</string>
    <string name="animation_genre_text">Animation</string>
    <string name="comedy_genre_text">Comedy</string>
    <string name="crime_genre_text">Crime</string>
    <string name="documentary_genre_text">Documentary</string>
    <string name="drama_genre_text">Drama</string>
    <string name="family_genre_text">Family</string>
    <string name="fantasy_genre_text">Fantasy</string>
    <string name="history_genre_text">History</string>
    <string name="horror_genre_text">Horror</string>
    <string name="music_genre_text">Music</string>
    <string name="mystery_genre_text">Mystery</string>
    <string name="romance_genre_text">Romance</string>
    <string name="science_fiction_genre_text">Sci-Fi</string>
    <string name="tv_movie_genre_text">TV Movie</string>
    <string name="thriller_genre_text">Thriller</string>
    <string name="war_genre_text">War</string>
    <string name="western_genre_text">Western</string>
</resources>